--- a/style.css
+++ b/style.css
@@ -1,57 +1,59 @@
-* {
-  padding: 0;
-  margin: 0;
+html {
   box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+*,
+*:before,
+*:after {
+  box-sizing: inherit;
 }
 
 body {
+  margin: 0;
   background: radial-gradient(
     circle,
     rgba(63, 94, 251, 1) 0%,
     rgba(252, 70, 107, 1) 100%
   );
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 nav {
   position: relative;
-  padding: 0.5rem;
 }
 
 ul {
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 2rem;
+  gap: 1.5rem;
+}
 
-  & li {
-    position: relative;
-    display: flex;
-    justify-content: center;
-    list-style-type: none;
-    text-align: center;
-  }
+li {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  list-style-type: none;
+  text-align: center;
+}
 
-  & a {
-    color: yellow;
-    text-decoration: none;
-    background-color: rgba(0, 0, 0, 0.1);
-    padding: 10px;
-  }
-
-  & p {
-    margin: 10px 0;
-  }
+a {
+  color: yellow;
+  text-decoration: none;
+  background-color: rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  display: inline-block;
 }
 
 .dropdown {
   opacity: 0;
   position: absolute;
-  padding: 20px;
+  padding: 15px;
   top: -20px;
   border-radius: 5px;
   transition: all 0.5s;
   transform: translateY(100px);
+  will-change: opacity;
   display: none;
 }
 
@@ -67,6 +69,9 @@ ul {
 .dropdown-3 a {
   background: none;
   color: black;
+}
+
+.dropdown-3 .bio {
   display: flex;
   flex-direction: column;
 }
@@ -80,7 +85,7 @@ ul {
   box-shadow: 0 50px 100px rgba(50, 50, 93, 0.1),
     0 15px 35px rgba(50, 50, 93, 0.15), 0 5px 15px rgba(0, 0, 0, 0.1);
   transition: all 0.4s, opacity 0.1s, translate 0.2s;
-  transform-origin: 50% 0%;
+  transform-origin: 50% 0;
   display: flex;
   justify-content: center;
   opacity: 0;
